<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" android:id="@+id/ScrollView01" android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hola"
                />

            <EditText
                android:id="@+id/entry"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@android:drawable/editbox_background"/>
        </LinearLayout>


        <RadioGroup
                android:id="@+id/RadioGroup01"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

            <TextView
                android:text="@string/saludoSrSra"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <RadioButton
                android:text="@string/saludoSr"
                android:id="@+id/radioSr"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

                <RadioButton
                    android:text="@string/saludoSra"
                    android:id="@+id/radioSra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"/>
        </RadioGroup>

        <RadioGroup
            android:id="@+id/RadioGroup02"
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:text="@string/bHola"
                android:id="@+id/radioHola"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <RadioButton
                android:text="@string/bAdios"
                android:id="@+id/radioAdios"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"/>



        </RadioGroup>








        <CheckBox
            android:text="@string/showTime"
            android:id="@+id/checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            </CheckBox>

        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            </TimePicker>
        <DatePicker
            android:id="@+id/datePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone">

            </DatePicker>

        <Button android:id="@+id/btnHola"
            android:text="@string/saludo"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_gravity="center">

            </Button>
        <TextView
            android:id="@+id/out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />



        </LinearLayout>

    </ScrollView>
